--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^1.7.7",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.11.17",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
